--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <string name="app_name">MOD Store</string>
-    <string name="action_settings">Settings</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
-
+    <string name="action_search">Search</string>
+	<string name="action_settings">Settings</string>
+	<string name="action_myaccount">My Account</string>
+	<string name="action_addproduct">Sell Product</string>
 </resources>
