--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="action_search">Search</string>
-	<string name="action_settings">Settings</string>
-	<string name="action_myaccount">My Account</string>
-	<string name="action_addproduct">Sell Product</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_myaccount">My Account</string>
+    <string name="action_addproduct">Sell Product</string>
+    <string name="title_activity_main">MainActivity</string>
+
 </resources>
