--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -12,5 +12,8 @@
     <string name="cc_name">Full name:</string>
     <string name="cc_number">Number:</string>
     <string name="cc_expire">Expire:</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_about">About</string>
+  
 
 </resources>
