--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="cc_expire">Expire:</string>
     <string name="title_settings">Settings</string>
     <string name="title_about">About</string>
+    <string name="about_logo_description">Mod Store Logo</string>
+    <string name="about_description">This is Pure Android, Bitch!</string>
   
 
 </resources>
