--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="title_about">About</string>
     <string name="about_logo_description">Mod Store Logo</string>
     <string name="about_description">This is Pure Android, Bitch!</string>
+    
+    <string name="no_data_label">No Data</string>
 </resources>
