--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="hint_ccfullname">Full Name</string>
     <string name="hint_ccv">CCV</string>
     <string name="hint_ccmonth">Month</string>
+    <string name="btn_filters">Filters</string>
 </resources>
