--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -66,4 +66,6 @@
     <string name="search_filter_start_hint">$0.00</string>
     <string name="search_filter_end_hint">Any</string>
     <string name="search_filter_error_price">Error in Price Order</string>
+    <string name="placeholder_search_desc">Placeholder Search Icon</string>
+    <string name="search_progress_msg">Searching…</string>
 </resources>
