--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -69,4 +69,7 @@
     <string name="placeholder_search_desc">Placeholder Search Icon</string>
     <string name="search_progress_msg">Searching…</string>
     <string name="search_error">Unable to complete search. Please try again.</string>
+    <color name="dark_gray">#707070</color>
+    <string name="new_password">New Password&#8230;</string>
+    <string name="new_password_confirm">Confirm New Password&#8230;</string>
 </resources>
