--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -98,4 +98,7 @@
     <string name="label_endedon">Auction Ended On:</string>
     <string name="label_maxbid">Bid:</string>
     <string name="label_quantity">Quantity:</string>
+    <string name="label_shippingaddress">Shipping Address:</string>
+    <string name="label_trackingnum">Tracking Number:</string>
+    <string name="btn_submittracking">Update</string>
 </resources>
