--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="title_settings">Settings</string>
     <string name="title_about">About</string>
     <string name="about_logo_description">Mod Store Logo</string>
-    <string name="about_description">This is Pure Android, Bitch!</string>
+    <string name="about_description">This is Pure Android\nMOD TEAM\n(M)anuel Marquez\n(O)omar Soto\n(D)aniel Santiago\nFor ICOM5016</string>
     <string name="login_show">Show</string>
     <string name="login_str">Log In</string>
     <string name="register_str">Register</string>
@@ -115,4 +115,5 @@
     <string name="cart_dialog_title">My Order Summary</string>
     <string name="cart_dialog_cancel">Cancel</string>
     <string name="cart_dialog_confirm_to_buy">Commit to Buy</string>
+    <string name="item_watch_title">Item Watch</string>
 </resources>
