--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -106,4 +106,21 @@
     <string name="label_shippingaddress">Shipping Address:</string>
     <string name="label_trackingnum">Tracking Number:</string>
     <string name="btn_submittracking">Update</string>
+    
+    
+    <!-- Error Dialog -->
+    <string name="dialog_err_wifi_title">Error</string>
+    <string name="dialog_err_wifi_desc">No Data Connection Found. Please Try again</string>
+    <string name="dialog_err_wifi_cancel">Cancel</string>
+    <string name="dialog_err_wifi_tryagain">Try Again</string>
+    
+    <!-- Error Messages -->
+    <string name="errmsg_no_connection">No Connection</string>
+    <string name="errmsg_bad_json">Bad JSON parsing&#8230;</string>
+    
+    <!-- Main Activity -->
+    <string name="pd_mactivity">Loading App</string>
+    
+    
+    
 </resources>
