--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -26,10 +26,12 @@
     <string name="login_forgot">Forgot?</string>
     <string name="login_error">Error in Username or Password, Please Try Again</string>
     <string name="forgot_dialog_title">Forgot?</string>
+
     <string-array name="forgot_dialog_values">
-        <item >Email</item>
-        <item >Password</item>
+        <item>Email</item>
+        <item>Password</item>
     </string-array>
+
     <string name="register_title">Setup Account</string>
     <string name="register_instructions">You can create your account in just a few steps:</string>
     <string name="register_username">Username:</string>
@@ -38,7 +40,7 @@
     <string name="register_email">Email:</string>
     <string name="register_fn">First Name:</string>
     <string name="register_ln">Last Name:</string>
-    <string name="logging_message">Logging in#8230;</string>
+    <string name="logging_message">Logging in&#8230;;</string>
     <string name="forgot_title">Forgot Something?</string>
     <string name="forgot_message">If you forgotten your password or username, please enter your account’s email.</string>
     <string name="forgot_send">Send</string>
@@ -69,8 +71,10 @@
     <string name="placeholder_search_desc">Placeholder Search Icon</string>
     <string name="search_progress_msg">Searching…</string>
     <string name="search_error">Unable to complete search. Please try again.</string>
+
     <color name="dark_gray">#707070</color>
     <color name="dark_green">#336600</color>
+
     <string name="new_password">New Password&#8230;</string>
     <string name="new_password_confirm">Confirm New Password&#8230;</string>
     <string name="hint_ccyear">Year</string>
@@ -106,21 +110,46 @@
     <string name="label_shippingaddress">Shipping Address:</string>
     <string name="label_trackingnum">Tracking Number:</string>
     <string name="btn_submittracking">Update</string>
-    
-    
+
     <!-- Error Dialog -->
     <string name="dialog_err_wifi_title">Error</string>
     <string name="dialog_err_wifi_desc">No Data Connection Found. Please Try again</string>
     <string name="dialog_err_wifi_cancel">Cancel</string>
     <string name="dialog_err_wifi_tryagain">Try Again</string>
-    
+
     <!-- Error Messages -->
     <string name="errmsg_no_connection">No Connection</string>
     <string name="errmsg_bad_json">Bad JSON parsing&#8230;</string>
-    
+
     <!-- Main Activity -->
     <string name="pd_mactivity">Loading App</string>
+    <string name="title_activity_my_orders">MyOrdersActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    
+    <!-- MyOrders Acitivity -->
+    <string name="title_myorders">My Orders</string>
+    <string name="sec_title_selling">Selling</string>
+    <string name="sec_title_buying">Buying</string>
+    
+    <!-- My Orders Buying Fragment -->
+    <string name="listbuy_bidding">Bidding</string>
+    <string name="listbuysell_no_item">No Items</string>
+    <string name="listbuysell_load">Loading&#8230;</string>
+    <string name="listbuy_purchase">Purchase</string>
+    <string name="listbuy_nwin">Didn\'t Win</string>
+    <!-- My Orders Selling Fragment -->
+    <string name="listsell_active">Active</string>
+    <string name="listsell_sold">Sold</string>
     
     
     
+    <!-- About Activity -->
+    <string name="mod_names">Manuel-Omar-Daniel</string>
+    <string name="about_img_desc">About Image</string>
+    
+    
+
 </resources>
