--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="title_settings">Settings</string>
     <string name="title_about">About</string>
     <string name="about_logo_description">Mod Store Logo</string>
-    <string name="about_description">This is Pure Android\nMOD TEAM\n(M)anuel Marquez\n(O)omar Soto\n(D)aniel Santiago\nFor ICOM5016</string>
+    <string name="about_description">This is Pure Android, Bitch!</string>
     <string name="login_show">Show</string>
     <string name="login_str">Log In</string>
     <string name="register_str">Register</string>
@@ -164,8 +164,6 @@
     <string name="mod_names">Manuel-Omar-Daniel</string>
     <string name="about_img_desc">About Image</string>
     <string name="title_activity_log_in_register">LogInRegisterActivity</string>
-<<<<<<< HEAD
-=======
     <string name="title_activity_settings">SettingsActivity</string>
     
     <!-- Settings Activity -->
@@ -189,5 +187,4 @@
     
     
 
->>>>>>> 768f978e2ba2821f2aa9cccec3444effb6d74665
 </resources>
