--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -132,7 +132,7 @@
     <!-- MyOrders Acitivity -->
     <string name="title_myorders">My Orders</string>
     <string name="sec_title_selling">Selling</string>
-    <string name="sec_title_buying">Buying</string>
+    <string name="sec_title_buying">Bidding</string>
     <string name="sec_tittle_orders">Orders</string>
 
     <!-- My Orders Orders Fragment -->
@@ -142,8 +142,8 @@
     <string name="orders_quantity">Quantity: 0</string>
     <string name="orders_date">Date: 1/1/1900</string>
 
-    <!-- My Orders Buying Fragment -->
-    <string name="listbuy_bidding">Bidding</string>
+    <!-- My Orders Bidding Fragment -->
+    <string name="listbuy_bidding">Currently Bidding</string>
     <string name="listbuysell_no_item">No Items</string>
     <string name="listbuysell_load">Loading&#8230;</string>
     <string name="listbuy_nwin">Didn\'t Win</string>
