--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -150,6 +150,7 @@
     <!-- My Orders Selling Fragment -->
     <string name="listsell_active">Active</string>
     <string name="listsell_sold">Sold</string>
+    <string name="listsell_notsold">Not Sold</string>
 
     <!-- My Orders Product Adapter -->
     <string name="listbuysellrow_img_desc">Image of Item</string>
@@ -165,12 +166,12 @@
     <string name="about_img_desc">About Image</string>
     <string name="title_activity_log_in_register">LogInRegisterActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
-    
+
     <!-- Settings Activity -->
     <string name="setting_title_basic_info">Basic Information</string>
     <string name="setting_title_cc">Credit Card</string>
     <string name="setting_title_addr">Addresses</string>
-    
+
     <!-- MyOrderDetailActivity -->
     <string name="title_myorder">Order</string>
     <string name="title_item">Items</string>
@@ -184,7 +185,8 @@
     <string name="textbox_orderpaymenttitle">Payment Information:</string>
     <string name="textbox_orderccnum">*****</string>
     <string name="textbox_orderbillingaddrtitle">Billing Address:</string>
-    
+    <string name="title_activity_product_viewer">ProductViewerActivity</string>
+    <string name="hello_world">Hello world!</string>
     
 
 </resources>
