Filter fully working

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -191,5 +191,8 @@
    
 	<!-- SellingViewerActivty -->
 	<string name="title_sellitem">Sell Item</string>
+	
+	<!-- Search Part -->
+	<string name="noitem_found">No Item Found</string>
 
 </resources>
