Fixes on Sell a Product. Added some intel to do different things if the Product is going to be an Auction.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -195,5 +195,6 @@
 	
 	<!-- Search Part -->
 	<string name="noitem_found">No Item Found</string>
+	<string name="will_have_auction">Is an Auction?</string>
 
 </resources>
