--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -287,4 +287,7 @@
     <string name="change">Change</string>
     <string name="cart_change_quantity_dialog_title">Change Product Quantity</string>
     <string name="cart_change_quantity">Quantity:</string>
+    <string name="cart_remove_item_success">Successfully Removed</string>
+    <string name="cart_remove_item_error">Unable to Remove</string>
+    
 </resources>
